--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
     "pinia": "^2.1.7",
+    "socket.io-client": "^4.8.1",
+    "sweetalert2": "^11.17.2",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vue3-apexcharts": "^1.4.4"
