--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@vueuse/core": "^10.7.1",
     "apexcharts": "^3.45.1",
+    "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
     "pinia": "^2.1.7",
