--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "jspdf-autotable": "^5.0.2",
     "jsvectormap": "^1.5.3",
     "pinia": "^2.1.7",
     "socket.io-client": "^4.8.1",
