--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@vuepic/vue-datepicker": "^11.0.1",
     "@vueuse/core": "^10.7.1",
     "apexcharts": "^3.45.1",
