--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jsvectormap": "^1.5.3",
     "jszip": "^3.10.1",
