--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "howler": "^2.2.4",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jsvectormap": "^1.5.3",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/howler": "^2.2.12",
     "@types/node": "^18.19.3",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
